<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Characters from Rick and Morty</string>
    <string name="toast_close_message">Tap BACK again to exit</string>
    <string name="bottom_nav_character">Characters</string>
    <string name="bottom_nav_location">Locations</string>
    <string name="bottom_nav_episode">Episodes</string>
    <string name="fragment_character_list">List of Characters</string>
    <string name="fragment_episode_list">List of Episodes</string>
    <string name="fragment_location_list">List of Locations</string>
    <string name="fragment_settings">Settings</string>
    <string name="ma_snack_no_connection">No internet connection</string>
    <string name="ma_snack_database_up_to_date">Database is up to date</string>
    <string name="ma_snack_database_sync">Updating Database</string>
    <string name="ma_snack_database_not_synced">Please connect to the internet for a database check</string>
    <string name="ma_snack_error_server_error">Error while syncing the database. \nServer Error: </string>
    <string name="ma_snack_error_network_error">Error while syncing the database. \nPlease, check your network connection</string>
    <string name="ma_snack_error_empty_response">Error while syncing the database. \nServer response is empty</string>
    <string name="filter">Filter</string>
    <string name="dialog_title">Filter options</string>
    <string name="dialog_subtitle_status">Filter by status:</string>
    <string name="dialog_subtitle_gender">Filter by gender:</string>
    <string name="dialog_subtitle_species">Filter by species:</string>
    <string name="dialog_species_all">Show all</string>
    <string name="dialog_positive_button">Apply</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_error_message">Please, select at least one option in these categories:\n\n</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_status">status</string>
    <string name="dialog_error_gender">gender</string>
    <string name="dialog_error_species">species</string>
    <string name="dialog_subtitle_type">Filter by type:</string>
    <string name="dialog_subtitle_dimension">Filter by dimension:</string>
    <string name="dialog_error_type">type</string>
    <string name="dialog_error_dimension">dimension</string>
    <string name="dialog_subtitle_season">Seasons:</string>
    <string name="dialog_season_1" translatable="false">S 01</string>
    <string name="dialog_season_2" translatable="false">S 02</string>
    <string name="dialog_season_3" translatable="false">S 03</string>
    <string name="dialog_season_4" translatable="false">S 04</string>
    <string name="dialog_error_season">season</string>
    <string name="clf_no_results_query">Oops, nothing found :(</string>
    <string name="clf_searchview_query_hint"><font size="14">Search characters</font></string>
    <string name="llf_searchview_query_hint"><font size="14">Search locations</font></string>
    <string name="elf_searchview_query_hint"><font size="14">Search episodes</font></string>
    <string name="episode_name_placeholder" translatable="false">\"%1$s\"</string>
    <string name="fragment_settings_preference_category_theme">Interface</string>
    <string name="fragment_settings_theme_list_title">App\'s theme</string>
    <string name="fragment_settings_theme_switch_title">Enable dark theme</string>
    <string name="fragment_settings_preference_category_help">About</string>
    <string name="fragment_settings_preference_version">Version</string>
    <string name="fragment_settings_version" translatable="false">: v</string>
    <string name="fragment_settings_theme_entry_follow_system">Follow the system</string>
    <string name="fragment_settings_theme_entry_dark_theme">Dark theme</string>
    <string name="fragment_settings_theme_entry_light_theme">Light theme</string>
    <string name="fragment_settings_theme_value_follow_system" translatable="false">-1</string>
    <string name="fragment_settings_theme_value_dark_theme" translatable="false">2</string>
    <string name="fragment_settings_theme_value_light_theme" translatable="false">1</string>
    <string name="share_description">Share</string>
    <string name="error_share_no_network">Sharing failed, please check your internet connection</string>
    <string name="share_title">Share image with…</string>
    <string name="item_search">Search</string>
    <string name="item_settings">Settings</string>
    <string name="item_filter">Do not show dead</string>
    <string name="item_overflow" translatable="false">Overflow</string>
    <string name="img_character_description">Character image</string>
    <string name="tv_character_name">Name:</string>
    <string name="tv_character_status">Status:</string>
    <string name="tv_character_detail_status_unknown">Unknown</string>
    <string name="tv_character_species">Species:</string>
    <string name="tv_character_detail_species_unknown">Unknown</string>
    <string name="tv_character_gender">Gender:</string>
    <string name="tv_character_detail_gender_unknown">Unknown</string>
    <string name="tv_character_origin">Origin:</string>
    <string name="tv_character_last_loc">Last location:</string>
    <string name="tv_character_last_loc_unknown_value">Location unknown</string>
    <string name="tv_character_episode_list">Seen in episodes:</string>
    <string name="tv_character_list_pb">Aw Jeez…</string>
    <string name="img_location_description">Location image placeholder</string>
    <string name="img_episode_description">Episode image placeholder</string>
    <string name="tv_location_detail_dimension_unknown">Dimension unknown</string>
    <string name="tv_location_detail_type_unknown">Type unknown</string>
    <string name="tv_location_type">Type:</string>
    <string name="tv_location_dimension">Dimension:</string>
    <string name="tv_location_residents">Residents in this location:</string>
    <string name="tv_location_residents_unknown">Unknown</string>
    <string name="tv_episode_name">Name</string>
    <string name="tv_episode_code">S03E09</string>
    <string name="tv_episode_air_date">Air Date:</string>
    <string name="tv_episode_characters_list">Characters, seen in the episode:</string>
    <string name="tv_episode_descr_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Ut vitae lacus euismod, tincidunt est nec, tincidunt dolor.
        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        Phasellus mattis iaculis nibh vel congue. Vestibulum finibus ac turpis eu elementum.
        Aliquam volutpat, tellus ac eleifend pellentesque, orci sem mollis tellus, id viverra felis orci quis enim.
        Phasellus suscipit lorem quis elit rutrum tristique.</string>
    <string name="character_1">Rick Sanchez</string>
    <string name="character_2">Morty Smith</string>
    <string name="character_3">Summer Smith</string>
    <string name="character_4">Beth Smith</string>
    <string name="character_5">Jerry Smith</string>
    <string name="character_6">Abadango Cluster Princess</string>
    <string name="character_7">Abradolf Lincler</string>
    <string name="character_8">Adjudicator Rick</string>
    <string name="character_9">Agency Director</string>
    <string name="character_10">Alan Rails</string>
    <string name="character_11">Albert Einstein</string>
    <string name="character_12">Alexander</string>
    <string name="character_13">Alien Googah</string>
    <string name="character_14">Alien Morty</string>
    <string name="character_15">Alien Rick</string>
    <string name="character_16">Amish Cyborg</string>
    <string name="character_17">Annie</string>
    <string name="character_18">Antenna Morty</string>
    <string name="character_19">Antenna Rick</string>
    <string name="character_20">Ants in my Eyes Johnson</string>
    <string name="character_21">Aqua Morty</string>
    <string name="character_22">Aqua Rick</string>
    <string name="character_23">Arcade Alien</string>
    <string name="character_24">Armagheadon</string>
    <string name="character_25">Armothy</string>
    <string name="character_26">Arthricia</string>
    <string name="character_27">Artist Morty</string>
    <string name="character_28">Attila Starwar</string>
    <string name="character_29">Baby Legs</string>
    <string name="character_30">Baby Poopybutthole</string>
    <string name="character_31">Baby Wizard</string>
    <string name="character_32">Bearded Lady</string>
    <string name="character_33">Beebo</string>
    <string name="character_34">Benjamin</string>
    <string name="character_35">Bepisian</string>
    <string name="character_36">Beta-Seven</string>
    <string name="character_37">Beth Sanchez</string>
    <string name="character_38">Beth Smith</string>
    <string name="character_39">Beth Smith</string>
    <string name="character_40">Beths Mytholog</string>
    <string name="character_41">Big Boobed Waitress</string>
    <string name="character_42">Big Head Morty</string>
    <string name="character_43">Big Morty</string>
    <string name="character_44">Body Guard Morty</string>
    <string name="character_45">Bill</string>
    <string name="character_46">Bill</string>
    <string name="character_47">Birdperson</string>
    <string name="character_48">Black Rick</string>
    <string name="character_49">Blamph</string>
    <string name="character_50">Blim Blam</string>
    <string name="character_51">Blue Diplomat</string>
    <string name="character_52">Blue Footprint Guy</string>
    <string name="character_53">Blue Shirt Morty</string>
    <string name="character_54">Bobby Moynihan</string>
    <string name="character_55">Boobloosian</string>
    <string name="character_56">Bootleg Portal Chemist Rick</string>
    <string name="character_57">Borpocian</string>
    <string name="character_58">Brad</string>
    <string name="character_59">Brad Anderson</string>
    <string name="character_60">Calypso</string>
    <string name="character_61">Campaign Manager Morty</string>
    <string name="character_62">Canklanker Thom</string>
    <string name="character_63">Centaur</string>
    <string name="character_64">Chris</string>
    <string name="character_65">Chris</string>
    <string name="character_66">Coach Feratu (Balik Alistane)</string>
    <string name="character_67">Collector</string>
    <string name="character_68">Colossus</string>
    <string name="character_69">Commander Rick</string>
    <string name="character_70">Concerto</string>
    <string name="character_71">Conroy</string>
    <string name="character_72">Cool Rick</string>
    <string name="character_gender_genderless">Genderless</string>
    <string name="character_gender_female">Female</string>
    <string name="character_gender_male">Male</string>
    <string name="character_gender_unknown">unknown</string>
    <string name="character_status_alive_male">Alive</string>
    <string name="character_status_dead_male">Dead</string>
    <string name="species_Human">Human</string>
    <string name="species_Alien">Alien</string>
    <string name="species_Humanoid">Humanoid</string>
    <string name="species_Poopybutthole">Poopybutthole</string>
    <string name="species_Animal">Animal</string>
    <string name="species_Robot">Robot</string>
    <string name="species_Cronenberg">Cronenberg</string>
    <string name="species_Mythological_Creature">Mythological Creature</string>
    <string name="location_Planet">Planet</string>
    <string name="location_Space_station">Space station</string>
    <string name="location_Microverse">Microverse</string>
    <string name="location_Dimension_C_137">Dimension C-137</string>
    <string name="location_Replacement_Dimension">Replacement Dimension</string>
    <string name="location_Cronenberg_Dimension">Cronenberg Dimension</string>
</resources>