<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_subtitle_type"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        tools:ignore="ContentDescription" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_species_all"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_planet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_Planet"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_space_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_Space_station"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_microverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_Microverse"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_subtitle_dimension"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        tools:ignore="ContentDescription" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/dimension_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_species_all"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/dimension_replacement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_Replacement_Dimension"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/dimension_c_137"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_Dimension_C_137"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/dimension_cronenberg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_Cronenberg_Dimension"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/dimension_unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_gender_unknown"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

</LinearLayout>