<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_subtitle_season"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        tools:ignore="ContentDescription" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/season_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_species_all"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/season_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_season_1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/season_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_season_2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/season_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_season_3"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/season_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_season_4"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

</LinearLayout>