<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--TODO delete this layout-->
    <item
        android:id="@+id/search_button"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/item_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/overflow_menu"
        android:icon="@drawable/ic_overflow"
        android:title="@string/item_overflow"
        android:orderInCategory="2"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/settings_Fragment"
                android:icon="@drawable/ic_settings"
                android:orderInCategory="3"
                android:title="@string/item_settings"
                app:iconTint="?attr/colorSecondary"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/filter_button"
                android:checkable="true"
                android:icon="@drawable/ic_filter_list"
                android:orderInCategory="4"
                android:title="@string/item_filter"
                app:iconTint="?attr/colorSecondary"
                app:showAsAction="ifRoom|withText" />
        </menu>
    </item>

</menu>